--- a/search.html
+++ b/search.html
@@ -4,17 +4,27 @@ title: Search My Site...
 header: Site Searcher...
 group: example-page
 ---
-<html>
 <head>
-<script type="text/javascript" src="/assets/themes/pradeep/js/jquery-1.4.4.min.js"></script>
-<script type="text/javascript" src="/assets/themes/pradeep/js/porter-stemmer.js"></script>
-<script type="text/javascript" src="/assets/themes/pradeep/js/site-search.js"></script>
+     <script type="text/javascript" src="http://code.angularjs.org/angular-1.0.1.min.js"></script>
+     <script type="text/javascript" src="assets/themes/pradeep/js/JekyllApp.js"></script>
 </head>
-<form id="search" method="get">
-					<label for="search-text">Search</label>
-					<input type="text" name="search-text" id="search-text">
-</form>
-<br/>
-<h2> Search Results:</h2>
-<div id="search-results">
+
+<script type="text/javascript">
+   // Using liquid to populate JeykllApp.posts array
+   JekyllApp.posts = {% include helpers/JekyllAppPosts %}
+</script>
+<div id="search-container" class="entrance" ng-app="JekyllApp" ng-controller="JekyllSearchController">
+  <div class="entrance-item">
+    <p><input id="searchText" type="search" placeholder="Live Search Posts..." ng-model-instant ng-model="searchText" />
+  </div>
+  <div class="entrance-item">
+    <ul>
+      <li ng-repeat="post in posts | filter:searchText">
+         <span ng-bind-html-unsafe="post.date | date:'MMM d, y' | highlight:searchText"></span> &raquo;
+        <a ng-href="{{ '{{ post.url ' }}}}" ng-click="externalLink()"
+           ng-bind-html-unsafe="post.title | highlight:searchText"></a>
+          <div class="preview" ng-bind-html-unsafe="post.content  | highlight:searchText"></div>
+      </li>
+    </ul>
+  </div>
 </div>
