--- a/test.html
+++ b/test.html
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
@@ -44,7 +43,7 @@ HowMany.prototype.onHistory = function(history) {
   var mall_counts = 0;
   for (var i = 0; i < history.length; i++) {
     var entry = history[i]['venue'];
-    if (entry.menu == 'undefined')
+    if (entry.menu == undefined)
     {
       //deal with non food places here
       if (entry.categories[0].name == 'Airport')
