--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@ HowMany.prototype.onHistory = function(history) {
       }
       else if (entry.categories[0].name == 'Mall')
       {
-        mall_counts++
+        mall_counts++;
         mall_html.push(entry.name, ', ', entry.location.address, ', ', entry.location.city, '<br/>');
       }
       else if (entry.categories[0].name == 'Multiplex')
