--- a/test.html
+++ b/test.html
@@ -118,28 +118,28 @@ $(function() {
 
 <h1>How many Airports have I been to?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="airports_count">
+<div style="width: 600px; height: 600px; position: absolute;" id="airports_counts">
 </div>
 <div style="margin-left: 200px" id="airports_html">
 </div>
 
 <h1>How many Multiplexes have I been to ?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="multiplex_count">
+<div style="width: 600px; height: 600px; position: absolute;" id="multiplex_counts">
 </div>
 <div style="margin-left: 200px" id="multiplex_html">
 </div>
 
 <h1>How many Malls have I been to ?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="mall_count">
+<div style="width: 600px; height: 600px; position: absolute;" id="mall_counts">
 </div>
 <div style="margin-left: 200px" id="mall_html">
 </div>
 
 <h1>How many resident buildings have I been to?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="resident_count">
+<div style="width: 600px; height: 600px; position: absolute;" id="resident_counts">
 </div>
 <div style="margin-left: 200px" id="resident_html">
 </div>
