--- a/test.html
+++ b/test.html
@@ -100,7 +100,7 @@ HowMany.prototype.onHistory = function(history) {
     $('#multiplex_counts').html(multiplex_counts + '');
 
     $('#restaurants_html').html(restaurants_html.join(''));
-    $('#resident_counts').html(restaurants_counts + '');
+    $('#restaurants_counts').html(restaurants_counts + '');
 
 }
 $(function() {
