--- a/test.html
+++ b/test.html
@@ -118,9 +118,9 @@ $(function() {
 
 <h1>How many Restaurants have I been to ?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="restaurant_counts">
+<div style="width: 600px; height: 600px; position: absolute;" id="restaurants_counts">
 </div>
-<div style="margin-left: 200px" id="restaurant_html">
+<div style="margin-left: 200px" id="restaurants_html">
 </div>
 
 <h1>How many Airports have I been to?</h1>
