--- a/test.html
+++ b/test.html
@@ -77,7 +77,7 @@ HowMany.prototype.onHistory = function(history) {
         coffee_counts++;
         coffee_html.push(entry.location.address, ', ', entry.location.city, '<br/>');
        }
-      else if (entry.name.indexOf('Restaurant') > -1) {
+      else if (entry.categories[0].name.indexOf('Restaurant') > -1) {
         restaurants_counts++; 
         restaurants_html.push(entry.name, ', ', entry.location.address, ', ', entry.location.city, '<br/>');
       }     
