--- a/test.html
+++ b/test.html
@@ -111,42 +111,42 @@ $(function() {
 <body>
 <h1>How many Starbucks have I been to?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="coffee_counts">
+<div style="width: 600px; height: 600px; position: absolute;" id="coffee_counts" class="count">
 </div>
 <div style="margin-left: 200px" id="coffee_html">
 </div>
 
 <h1>How many Restaurants have I been to ?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="restaurants_counts">
+<div style="width: 600px; height: 600px; position: absolute;" class = "count" id="restaurants_counts">
 </div>
 <div style="margin-left: 200px" id="restaurants_html">
 </div>
 
 <h1>How many Airports have I been to?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="airports_counts">
+<div style="width: 600px; height: 600px; position: absolute;" class ="count" id="airports_counts">
 </div>
 <div style="margin-left: 200px" id="airports_html">
 </div>
 
 <h1>How many Multiplexes have I been to ?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="multiplex_counts">
+<div style="width: 600px; height: 600px; position: absolute;" class = "count" id="multiplex_counts">
 </div>
 <div style="margin-left: 200px" id="multiplex_html">
 </div>
 
 <h1>How many Malls have I been to ?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="mall_counts">
+<div style="width: 600px; height: 600px; position: absolute;" class = "count" id="mall_counts">
 </div>
 <div style="margin-left: 200px" id="mall_html">
 </div>
 
 <h1>How many resident buildings have I been to?</h1>
 <br /><br />
-<div style="width: 600px; height: 600px; position: absolute;" id="resident_counts">
+<div style="width: 600px; height: 600px; position: absolute;" class = "count" id="resident_counts">
 </div>
 <div style="margin-left: 200px" id="resident_html">
 </div>
