adding food/restaurants icon

--- a/pathlog/index.html
+++ b/pathlog/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <h1>How many Restaurants have I been to ?</h1>
-  <br /><br />
+  <br /><img src = "https://foursquare.com/img/categories_v2/food/default_bg_64.png"/><br />
   <div style="width: 600px; height: 600px; position: absolute;" class = "count" id="restaurants_counts">
   </div>
   <div style="margin-left: 200px" id="restaurants_html">
