--- a/pathlog/index.html
+++ b/pathlog/index.html
@@ -18,10 +18,11 @@
   </div>
 
   <h1>How many Restaurants have I been to ?</h1>
-  <br /><img src = "https://foursquare.com/img/categories_v2/food/default_bg_64.png"/><br />
+  <br /><br />
   <div style="width: 600px; height: 600px; position: absolute;" class = "count" id="restaurants_counts">
   </div>
-  <div style="margin-left: 200px" id="restaurants_html">
+  <div style="margin-left: 200px"><img src = "https://foursquare.com/img/categories_v2/food/default_bg_64.png"/></div>
+  <div style="margin-left: 300px" id="restaurants_html">
   </div>
 
   <h1>How many Airports have I been to?</h1>
