--- a/knowme/index-1.html
+++ b/knowme/index-1.html
@@ -9,10 +9,6 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <script src="js/jquery.js"></script>
-    <script src="https://ss0.4sqi.net/scripts/third_party/jquery.ba-bbq-eddd4adf74d0c1310a401475178c57df.js" type="text/javascript"></script>
-    <script src="foursquare.js" type="text/javascript"></script>
-    <script src="create_mashup.js" type="text/javascript"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
     <style>
       body {
@@ -58,12 +54,8 @@
 
     <div class="container">
 
-    <h1>How many Starbucks have I been to?</h1>
-    <br /><br />
-    <div style="width: 600px; height: 600px; position: absolute;" id="coffee_counts" class="count">
-    </div>
-    <div style="margin-left: 200px" id="coffee_html">
-    </div>
+      <h1>Bootstrap starter template</h1>
+      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
 
     </div> <!-- /container -->
 
