--- a/findtherating/index.html
+++ b/findtherating/index.html
@@ -90,7 +90,7 @@
     <div class ="navbar navbar-inverse navbar-fixed-top">
         <div class = "navbar-inner">
             <div class = "container">
-                <a class ="brand" href="#">Trojan Movie Search</a>
+                <a class ="brand" href="#">FindTheBest</a>
             </div>
         </div>
     </div>
