small bug where nexus4 video was not shown is now fixed

--- a/findthebestrating/index.html
+++ b/findthebestrating/index.html
@@ -89,6 +89,7 @@
                 $('#video').empty();
                 $('#video').append('<h4 id = "video_title">Mobile Video Review</h4>');
                 $('#video').append(nexus4_video);
+                $('#video').show();
 
             }
             else 
